# tender-poc

./: .gitignore  Dockerfile  README.md  Readme.md  demo.py  demo_D.py  demo_S_Q.py  demo_prod.py  docker-compose.yml  exp.py  f_1.md  main.py  prompt_sample.txt  pyproject.toml  requirements.txt  test.ipynb
.streamlit/: config.toml
env/: pyvenv.cfg
utils/: bid_document.py  compliance_check.py  file_processing.py  llm_client.py  markdown_utils.py  markdown_utils_experimental.py  models.py  response_processing.py  sotr_construction.py  system_prompt.py
